--- a/app/src/main/res/layout/teacher_class_item.xml
+++ b/app/src/main/res/layout/teacher_class_item.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_marginBottom="16dp"
+    android:background="@color/white"
     android:layout_height="wrap_content">
 
     <TextView
